--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@
 
 *{
     box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -121,15 +124,66 @@ body{
 
 .content{
   display: flex;
+  height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 .main-content{
   margin-left: 280px;
   width: 100%;
+  overflow: hidden;
+  max-height: 100%;
 }
 
 .content-here{
+  height: 100%;
+  max-height: 90%;
   padding: 64px;
+  overflow: hidden;
+}
+
+.container{
+  background-color: white;
+  border-radius: 16px;
+  padding: 16px;
+  height: 100% !important;
+  max-height: 90% !important;
+  overflow: hidden;
+}
+
+.w-100{
+  width: 100%;
+}
+
+.h-100{
+  height: 100%;
+}
+
+.h-90{
+  height: 90%;
+}
+
+.block{
+  display: block;
+}
+
+.tag{
+  display: inline-block;
+  background-color: var(--primary);
+  width: fit-content;
+  padding: 4px 6px;
+  border-radius: 6px;
+  color: white;
+}
+
+.status{
+  display: inline-block;
+  background-color: rgb(255, 207, 207);
+  width: fit-content;
+  padding: 4px 6px;
+  border-radius: 6px;
+  color: var(--primary);
 }
 
 
