--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -72,9 +72,9 @@
 }
 
 .outlined{
-    outline: 1px solid var(--primary);
+    outline: 1px solid var(--secondary);
     background-color: rgba(0, 0, 0, 0);
-    color: #4287f5;
+    color: var(--primary);
 }
 
 .outlined:hover:enabled{
@@ -96,6 +96,11 @@
     box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.3);
 }
 
+.text{
+    background-color: rgba(0, 0, 0, 0);
+    color: var(--primary);
+}
+
 .secondary{
     background-color: #b4bec7;
     color: white;
@@ -109,6 +114,18 @@
 .negative:hover:enabled{
     outline: 0;
     background-color: var(--negative);
+}
+
+.dropdown{
+    width: 100%;
+    height: 50px;
+    outline: none;
+    padding: 0 30px;
+    font-size: 1rem;
+    color: #707070;
+    border-radius: 6px;
+    border: 1px solid #ddd;
+    padding: 0 15px;
 }
 
 
