--- a/src/index.css
+++ b/src/index.css
@@ -242,6 +242,21 @@ body{
   align-items: center;
 }
 
+.pad-8{
+  padding: 8px;
+}
+
+.pad-16{
+  padding: 16px;
+}
+
+.pad-24{
+  padding: 24px;
+}
+
+.pad-8{
+  padding: 32px;
+}
 
 
 
