--- a/src/index.css
+++ b/src/index.css
@@ -185,11 +185,7 @@ body{
   border-radius: 6px;
 }
 
-.status a{
-  text-decoration: none;
-  font-weight: 600;
-  color: var(--primary);
-}
+
 
 .status.error{
   background-color: rgb(255, 207, 207);
@@ -206,9 +202,14 @@ body{
   color: rgb(255, 230, 0);
 }
 
-.danger{
+.status.danger{
   color: rgb(255, 136, 0);
   background-color: rgb(255, 229, 207);
+}
+
+.status a{
+  font-weight: 600;
+  color: var(--primary);
 }
 
 .textalign-center{
