--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ body{
   margin-left: 280px;
   width: 100%;
   overflow: hidden;
-  max-height: 100%;
+  max-height: 100vh;
 }
 
 .content-here{
