feat: added filtering by status for modules - added filtering by status feature for all modules - added styling to statuses

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -68,7 +68,7 @@
     background-color: #fffb;
     height: 100% !important;
     max-height: 90% !important;
-
+    overflow-y: scroll;
     overflow: auto;
     overflow: overlay;
 }
